# omnichannel-retail-analytics-assistant

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  app.py  build_html.py  project_plan.html  pyproject.toml  requirements.txt  tools.py
.streamlit/: config.toml
agents/: contracts.py  customer-service-analyst.md  digital-analytics-analyst.md  finance-analyst.md  fulfillment-analyst.md  marketing-analyst.md  merchandising-analyst.md  team.py  vendor-analyst.md
app/: content.py  diagrams.py  main.py
catalog/: business_rules.yaml  catalog.yaml  drivers.yaml  examples.yaml  guardrails.yaml  metrics.yaml  tables.yaml  versions.yaml
data/: generator.py
docs/: Capstone_Checkpoint_5_1_Multi_Agent_Architecture.docx  Omnichannel_Implementation_Plan_Alignment.docx  multi_agent_design.md
evals/: safety_suite.py  validation.py
presentation/: CAPSTONE_SUBMISSION.md  CODE_WALKTHROUGH.md  DEMO_TALKING_POINTS.md  Omnichannel_8min.pptx  Omnichannel_Retail_Analytics_Assistant.pptx  RECORDING_GUIDE.md  TALKING_POINTS.md  build_arch_diagram.py  build_deck.py  build_deck_8min.py
prompts/: README.md  draft_answer.txt  draft_summary.txt
scripts/: _bootstrap.py  build_graph.py  build_index.py  make_data.py  validate_catalog.py
skills/: audit_skill.py  catalog_skill.py  graph_skill.py  input_skill.py  llm_skill.py  retrieval_skill.py  spec_loader.py  sql_skill.py  tot_skill.py  ui_format_skill.py
src/: agents.py  catalog.py  data_validation.py  diagrams.py  graph.py  guardrails.py  insights.py  investigation.py  llm.py  plan_content.py  tot.py  (+4 more)
(+27 files in other folders)
